--- a/Manual/Baybayin Words.html
+++ b/Manual/Baybayin Words.html
@@ -1,14 +1,24 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
-    <title>Baybayin Words — Keep Talking and Nobody Explodes Module</title>
     <meta name="viewport" content="initial-scale=1">
+    <title>Baybayin Words — Keep Talking and Nobody Explodes Module</title>
+    <link rel="stylesheet" type="text/css" href="css/font.css">
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
-    <link rel="stylesheet" type="text/css" href="css/font.css">
     <script src="js/ktane-utils.js"></script>
+    <style>
+        table {
+            margin: 1em auto;
+            text-align: center;
+            font-style: italic;
+        }
+        .normal {
+            font-style: normal;
+        }
+        
+    </style>
 </head>
 <body>
     <div class="section">
@@ -20,29 +30,30 @@
             <div class="page-content">
                 <img src="img/Component/Baybayin Words.svg" class="diagram">
                 <h2>On the Subject of Baybayin Words</h2>
-                <p class="flavour-text">We don't use this alphabet in our country. Especially since I'm not Filipino.</p>
+                <p class="flavour-text">We don’t actually use this alphabet in our country.</p>
 
                <p>The module consists of a display and 6 buttons.</p>
                <p>The display shows a Tagalog word that is written in Modern Baybayin Alphabet. Translate the word that is the given display into the English alphabet using the Translation Table and locate the English word that matches the given word. Select the translated word in one of the buttons in the module.</p>
                <p> Choosing the wrong word will cause a strike to occur and the module to reset. </p>
-			   <table>
-			   <tr><td colspan="6"><strong>Translation Table</strong></td></tr>
-			   <tr> <td>Word</td><td>Translation</td><td>Word</td><td>Translation</td><td>Word</td><td>Translation</td></tr>			    
+              <table>    
+           <tr><td colspan="6"><span class="normal"><strong>Translation Table</strong><span></td></tr>
+           <tr><td><span class="normal"><strong>Word</strong></span></td><td><span class="normal"><strong>Translation</strong></span></td><td><span class="normal"><strong>Word</strong></span></td><td><span class="normal"><strong>Translation</strong></span></td><td><span class="normal"><strong>Word</strong></span></td><td><span class="normal"><strong>Translation</strong></span></td></tr>                
                <tr><td>kalapati</td><td>dove</td><td>salamat</td><td>thanks</td><td>damit</td><td>clothing</td></tr>
-			   <tr><td>bahay</td><td>house</td><td>kapitan</td><td>captain</td><td>tanso</td><td>copper</td></tr>
-			   <tr><td>pagkain</td><td>food</td><td>palakpak</td><td>clap</td><td>pilak</td><td>silver</td><tr>
-			   <tr><td>tulog</td><td>sleep</td><td>mata</td><td>eyes</td><td>patay</td><td>dead</td></tr>
-			   <tr><td>tulay</td><td>bridge</td><td>sisid</td><td>dive</td><td>bingi</td><td>deaf</td></tr>
-			   <tr><td> kahoy</td><td>wood</td><td>halaman</td><td>plant</td><td>bulag</td><td>blind</td></tr>
-			   <tr><td>asukal</td><td>sugar</td><td>gamot</td><td>medicine</td><td>pilay</td><td>lame</td></tr>
-			   <tr><td>mayaman</td><td>rich</td><td>isla</td><td>island</td><td>pipi</td><td>mute</td></tr>
-			   <tr><td>sapatos</td><td>shoe</td><td>tago</td><td>hide</td><td>mantsa</td><td>stain</td></tr>
-			   <tr><td>ginto</td><td>gold</td><td>langoy</td><td>swim</td><td>plato</td><td>plate</td></tr>
+               <tr><td>bahay</td><td>house</td><td>kapitan</td><td>captain</td><td>tanso</td><td>copper</td></tr>
+               <tr><td>pagkain</td><td>food</td><td>palakpak</td><td>clap</td><td>pilak</td><td>silver</td><tr>
+               <tr><td>tulog</td><td>sleep</td><td>mata</td><td>eyes</td><td>patay</td><td>dead</td></tr>
+               <tr><td>tulay</td><td>bridge</td><td>sisid</td><td>dive</td><td>bingi</td><td>deaf</td></tr>
+               <tr><td>kahoy</td><td>wood</td><td>halaman</td><td>plant</td><td>bulag</td><td>blind</td></tr>
+               <tr><td>asukal</td><td>sugar</td><td>gamot</td><td>medicine</td><td>pilay</td><td>lame</td></tr>
+               <tr><td>mayaman</td><td>rich</td><td>isla</td><td>island</td><td>pipi</td><td>mute</td></tr>
+               <tr><td>sapatos</td><td>shoe</td><td>tago</td><td>hide</td><td>mantsa</td><td>stain</td></tr>
+               <tr><td>ginto</td><td>gold</td><td>langoy</td><td>swim</td><td>plato</td><td>plate</td></tr>
                <tr><td>kayumanggi</td><td>brown</td><td>lipad</td><td>fly</td><td>kutsilyo</td><td>knife</td></tr>
-			   <tr><td>kayamanan</td><td>treasure</td><td>kidlat</td><td>lightning</td><td>kuwintas</td><td>necklace</td></tr>
-			   <tr><td> mahina</td><td>weak</td><td>hapunan</td><td>dinner</td><td>singsing</td><td>ring</td></tr>
-			   <tr><td> bayabas</td><td>guava</td><td>agahan</td><td>breakfast</td><td>hinto</td><td>stop</td></tr>
-			   </table>
+           <tr><td>kayamanan</td><td>treasure</td><td>kidlat</td><td>lightning</td><td>kuwintas</td><td>necklace</td></tr>
+           <tr><td>mahina</td><td>weak</td><td>hapunan</td><td>dinner</td><td>singsing</td><td>ring</td></tr>
+           <tr><td>bayabas</td><td>guava</td><td>agahan</td><td>breakfast</td><td>hinto</td><td>stop</td></tr>
+           <tr><td>masaya</td><td>happy</td><td>tanghalian</td><td>lunch</td><td>lakad</td><td>walk</td></tr>
+           </table>
             </div>
             <div class="page-footer relative-footer">Page 1 of 2</div>
         </div>
@@ -56,7 +67,6 @@
                 <img style='width: 100%' src="img/Baybayin Words/Alphabet Table.png" />
             </div>
             <div class="page-footer relative-footer">Page 2 of 2</div>
-        </div>
         </div>
     </div>
 </body>
